Got simple JS working - functionality is needed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/root.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <script src="./scripts/script.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -54,7 +54,7 @@
         </div>
 
         <div class="button-1-container">
-          <button class="button-1" id="button-val">
+          <button class="button-1" id="button-click">
             <img
               src="./assets/icons/icon-arrow.svg"
               alt="arr"
@@ -64,5 +64,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
