managed to get error message to work when data is invalid

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/root.css" />
     <link rel="stylesheet" href="./css/main.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -62,6 +61,7 @@
             />
           </button>
         </div>
+        <p class="day-error">Must be a valid date!</p>
       </div>
     </div>
     <script src="./scripts/script.js"></script>
